Bug 396537 - "Removable devices" kcm should not show Snap mount points
Summary: "Removable devices" kcm should not show Snap mount points
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_deviceautomounter (other bugs)
Version First Reported In: 5.13.3
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Torrie Fischer
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2018-07-15 15:13 UTC by Patrick Silva
Modified: 2020-02-03 07:39 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18
Sentry Crash Report:


Attachments
"Removable devices" kcm showing Snap mount points (125.89 KB, image/png)
2018-07-15 15:13 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2018-07-15 15:13:23 UTC
Created attachment 113944 [details]
"Removable devices" kcm showing Snap mount points

Snap mount points should be hidden in "Removable devices" kcm.
Comment 1 Christoph Feck 2018-08-02 21:10:22 UTC
Should be possible to add a "*.snap" name filter in https://cgit.kde.org/plasma-desktop.git/tree/solid-device-automounter
Comment 2 Patrick Silva 2019-03-24 13:07:02 UTC
I can't confirm this bug with plasma 5.15.3 on Arch linux.
Comment 3 Patrick Silva 2019-04-22 18:49:09 UTC
I also can't confirm on neon dev unstable.
Comment 4 Patrick Silva 2019-04-22 18:53:17 UTC
ooops, we need check "Enable automatic mounting of removable media"
and expand "Attached devices" to see the snap mount points.
Comment 5 Méven Car 2020-02-03 07:39:26 UTC
Git commit 5eb5c9ab7d7eb9cd5713e2648abd3fd69ff90230 by Méven Car.
Committed on 03/02/2020 at 07:39.
Pushed by meven into branch 'master'.

Solid-device-automounter/kcm: Hide ignored Solid::StorageAccess

Summary:
FIXED-IN: 5.18

Reviewers: #plasma, broulik, ngraham, ervin

Reviewed By: ervin

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27019

M  +10   -4    solid-device-automounter/kcm/DeviceModel.cpp

https://commits.kde.org/plasma-desktop/5eb5c9ab7d7eb9cd5713e2648abd3fd69ff90230