Solid-device-automounter/kcm: Hide ignored Solid::StorageAccess

Summary:
BUG: 396537
FIXED-IN: 5.18

Reviewers: #plasma, broulik, ngraham, ervin

Reviewed By: ervin

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D27019